# rl-environments

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: think_action_json.json
rl_environments/: __init__.py  config.py
rl_environments/adapters/: verl.py
rl_environments/envs/: __init__.py  banditboxes_env.py  base_env.py  examples_envs.py  guessnumber_env.py  maze_env.py  ruledbandit_env.py  ruledbanditboxes_env.py  singlebanditboxes_env.py  thinkactionjson_env.py  tictactoerandom_env.py
rl_environments/scripts/: chat.py  host_mp_env.py  make_dataset.py
rl_environments/utils/: __init__.py  parsing.py  prompting.py  utils.py
tests/: test_import.py
